<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewGameMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.activity.GameMenuActivity">

    <TextView
        android:id="@+id/txtGamemenu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/pilih_lawanmu"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgVsPemain"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/pemain_vs_pemain"
        android:src="@drawable/landing_page1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtGamemenu1" />

    <TextView
        android:id="@+id/txtVsPemain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pemain_vs_pemain"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgVsPemain" />

    <ImageView
        android:id="@+id/imgVsCPU"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/pemain_vs_cpu"
        android:src="@drawable/landing_page2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtVsPemain" />

    <TextView
        android:id="@+id/txtVsCPU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pemain_vs_cpu"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgVsCPU" />

</androidx.constraintlayout.widget.ConstraintLayout>